them chatbotcontroller va giao dien chatbox de nhan tin nhan tra lai khi dung model cua ollama

--- a/backend/InvoiceManage/InvoiceManage/pom.xml
+++ b/backend/InvoiceManage/InvoiceManage/pom.xml
@@ -65,6 +65,18 @@
 			<version>1.18.30</version> <!-- Kiểm tra bản mới nhất -->
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version> <!-- Hoặc phiên bản mới nhất bạn tìm thấy -->
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
