--- a/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
+++ b/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+api.prefix=/api/v1
