--- a/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
+++ b/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.application.name=InvoiceManage
 spring.datasource.url=jdbc:mysql://localhost:3306/invoice
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-api.prefix=/api/v1
+api.prefix=/api
+jwt.secret=MySuperSecretKeyForJwtSigningThatIsVeryLong123456789!
+jwt.expiration=86400000 
+jwt.refresh-token.expiration=604800000
