--- a/base_vite_ts/package.json
+++ b/base_vite_ts/package.json
@@ -20,7 +20,7 @@
     "@tanstack/react-query": "^5.59.8",
     "@tanstack/react-query-devtools": "^5.59.8",
     "@vitejs/plugin-react": "^4.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.15.1",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
