--- a/base_vite_ts/package.json
+++ b/base_vite_ts/package.json
@@ -28,12 +28,15 @@
     "framer-motion": "^11.11.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
+    "rc-queue-anim": "^2.0.0",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-router-router": "^0.0.24",
     "react-toastify": "^10.0.5",
     "recharts": "^2.15.1",
     "sweetalert2": "^11.22.0",
