them lop auth de kiem tra co accesstoken ko

--- a/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
+++ b/backend/InvoiceManage/InvoiceManage/src/main/resources/application.properties
@@ -10,3 +10,12 @@ api.prefix=/api
 jwt.secret=MySuperSecretKeyForJwtSigningThatIsVeryLong123456789!
 jwt.expiration=86400000 
 jwt.refresh-token.expiration=604800000
+# Kích hoạt GZIP compression
+server.compression.enabled=true
+
+# Định dạng kiểu nội dung nén
+server.compression.mime-types=application/json,application/xml,text/html,text/plain,text/xml
+
+# Đặt mức độ nén (từ 1 đến 9, với 9 là nén mạnh nhất)
+server.compression.min-response-size=1024
+spring.threads.virtual.enabled=true
