--- a/base_vite_ts/package.json
+++ b/base_vite_ts/package.json
@@ -25,7 +25,10 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.8",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "rc-queue-anim": "^2.0.0",
@@ -42,10 +45,13 @@
     "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.10",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.10",
