--- a/base_vite_ts/package.json
+++ b/base_vite_ts/package.json
@@ -42,6 +42,7 @@
     "react-router-router": "^0.0.24",
     "react-toastify": "^10.0.5",
     "recharts": "^2.15.1",
+    "@stripe/stripe-js": "^7.3.1",
     "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
